<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_investment_opp"
            android:title="@string/menu_investments_opportunity" />
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard"/>
        <item
            android:id="@+id/nav_my_investments"
            android:title="@string/menu_my_investments" />
        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/menu_my_profile"  />
        <item
            android:id="@+id/nav_contact_information"
            android:title="@string/menu_contact_information" />
     <!--<item
            android:id="@+id/investmentOppFragment"
            android:title="Demo" />-->
       <item
           android:id="@+id/nav_logout"
           android:title="@string/menu_logout" />
    </group>
</menu>
