<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/_10sdp"
    tools:context=".mvvm.ui.changePassword.ChangePasswordFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtOldPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:hint="@string/enter_old_password"
                android:inputType="text"
                android:maxLength="20"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edtNPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:hint="@string/enter_new_password"
                android:inputType="text"
                android:maxLength="20"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edtConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:hint="@string/enter_confirm_password"
                android:inputType="text"
                android:maxLength="20"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_ripple_green"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>