<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/choose_photo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/lLayGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_gallery" />

            <TextView
                android:id="@+id/tvGallary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textColor="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLayCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textColor="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLayRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRemove"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete" />

            <TextView
                android:id="@+id/tvRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/remove"
                android:textAllCaps="false"
                android:textColor="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/green"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>