<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/light_gray_bg"
    tools:context="maxcrowdfund.com.mvvm.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/login_logo" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/password_to_login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_outline"
            android:fontFamily="@font/roboto"
            android:maxLength="40"
            android:textSize="@dimen/_12sdp"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_outline"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_solid_green"
            android:fontFamily="@font/roboto"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvPleaseRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_mess_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/first_on"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tv_max_crowd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_mess_reg"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingLeft="@dimen/_3sdp"
                android:text="@string/maxcrowdfund_com"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_max_crowd"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="."
                android:textColor="@color/light_gray_text"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>